# deepfind-cli

./: .env.example  .gitignore  PLAN_SAFE.md  QUICK_START.md  README.md  XIAOHONGSHU_LOGIN_FIX.md  ZHIHU_SEARCH_FIX.md  pyproject.toml  s -ExecutionPolicy RemoteSigned) ; (& cUsersdaviddevdeepfind-cli.venvScriptsActivate.ps1)
.venv.linux.bak/: pyvenv.cfg
deepfind/: __init__.py  asr.py  bili_transcribe.py  browser_fetch.py  chat_store.py  cli.py  config.py  gen_img.py  gen_slides.py  json_utils.py  llm.py  local_runtime.py  models.py  orchestrator.py  output.py  progress.py  tools.py  transcript_summary.py  web_api.py  web_fetch.py  web_models.py  web_progress.py  web_service.py  xhs_transcribe.py  youtube_audio_transcribe.py  youtube_transcribe.py
deepfind_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: bootstrap_rpi_ssh_key.sh  deploy_rpi.sh  deploy_win.ps1  fix-xhs-login.sh  start-mac-dev.sh  start-win-dev-skip-xhs.cmd  start-win-dev.cmd
tests/: test_asr.py  test_asr_mlx.py  test_bili_transcribe.py  test_chat_store.py  test_chrome_host.py  test_cli.py  test_config.py  test_desktop_app.py  test_gen_img.py  test_gen_slides.py  test_llm.py  test_local_runtime.py  test_multi_advisor.py  test_orchestrator.py  test_output.py  test_progress.py  test_security.py  test_tools.py  test_web_api.py  test_web_service.py  test_youtube_transcribe.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: site.webmanifest
web/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
web/src/test/: setup.ts
