[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepfind-cli"
version = "0.1.0"
description = "Lead/sub-agent web research CLI powered by Qwen."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "markdownify>=1.1.0",
  "openai>=2.15.0",
  "pypdf>=5.4.0",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
local-llm = []
media = [
  "accelerate>=0.20.0",
  "librosa>=0.10.0",
  "qwen-asr",
  "torch>=2.0.0",
  "torchaudio>=2.0.0",
  "transformers>=4.37.0",
]

[project.scripts]
deepfind = "deepfind.cli:main"
deepfind-web = "deepfind.web_api:main"

[tool.setuptools.packages.find]
include = ["deepfind*"]

